# basic_prj

./: CMakeLists.txt  CMakeLists.txt.template  README.adoc  basicConfig.cmake.in  basic_prjConfig.cmake.in  conanfile.txt  meson.build
cmake/: CPM.cmake  Cache.cmake  Catch2.cmake  CompilerWarnings.cmake  Conan.cmake  Debug.cmake  InstallDirs.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  Utilities.cmake  clang.cmake
include/util/: arguments.hpp  arrays.hpp  bounded_array.hpp  buffer.hpp  concept_helper.hpp  converters.hpp  debug.hpp  environment.hpp  execution.hpp  expected.hpp  filesystem.hpp  generator.hpp  optional.hpp  options.hpp  pipe.hpp  preferences.hpp  string.hpp  string_list.hpp  system.hpp  typeset.hpp  xml.hpp
include/util/option/: concepts.hpp  description.hpp  group.hpp
test/: CMakeLists.txt  buffer.cpp  environment.cpp  execution.cpp  main.cpp  options.cpp  pipe.cpp  preferences.cpp  primes.cpp  string_list.cpp
test/test_data/: line_data.hpp
